-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.0.0-beta
-
None
-
a1c18d9e971069d8e12c7becf1cf8794c9e18cc2
src.h:
struct Foo { Foo( Foo&& ); }
Refactor -> Add definition in 'file.cpp' gives:
Foo::Foo(Foo&) { }
First, rvalue reference become lvalue.
Second, coding format is broken, it should keep all spaces in their original places:
Foo::Foo( Foo&& ) { }
- replaces
-
QTCREATORBUG-10164 Apply signature changes does not work for universal (rvalue) references
-
- Closed
-
-
QTCREATORBUG-10997 "Add Definition" fails when invoked on move-constructor or move-assignment operators.
-
- Closed
-
-
QTCREATORBUG-6221 Add Definition doesn't understand r-value references
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-10555 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
72482,1 | TypeRewriter: Handle rvalue references correctly | 3.0 | qt-creator/qt-creator | Status: ABANDONED | -2 | 0 |
73099,2 | TypeRewriter: Handle rvalue references correctly | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |