src/libs/3rdparty/cplusplus/Control.h
@@ -91,7 +91,7 @@ public:
     PointerType *pointerType(const FullySpecifiedType &elementType);
 
     /// Returns a Type object of type ReferenceType.
-    ReferenceType *referenceType(const FullySpecifiedType &elementType, bool rvalueRef = false);
+    ReferenceType *referenceType(const FullySpecifiedType &elementType, bool rvalueRef);
 
     /// Retruns a Type object of type ArrayType.
     ArrayType *arrayType(const FullySpecifiedType &elementType, unsigned size = 0);
