src/plugins/cppeditor/cppeditorplugin.h
@@ -143,6 +143,7 @@ private slots:
     void test_quickfix_InsertDefFromDecl_macroUsesAtEndOfFile1();
     void test_quickfix_InsertDefFromDecl_macroUsesAtEndOfFile2();
     void test_quickfix_InsertDefFromDecl_erroneousStatementAtEndOfFile();
+    void test_quickfix_InsertDefFromDecl_rvalueReference();
 
     void test_quickfix_InsertDeclFromDef();
 
